install vue router

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mattb20/liamweb#readme",
   "dependencies": {
-    "express": "4.16.3"
+    "express": "4.16.3",
+    "vue-router": "^3.0.1"
   }
 }
